--- a/app/src/main/res/layout/list_item_shops.xml
+++ b/app/src/main/res/layout/list_item_shops.xml
@@ -1,15 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/shop_item_height">
+    android:layout_height="@dimen/shop_item_height"
+    android:orientation="horizontal"
+    tools:ignore="UseCompoundDrawables">
 
     <TextView
         android:id="@+id/nameTextView"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:layout_toLeftOf="@+id/nearestShopImageView"
-        android:layout_toStartOf="@+id/nearestShopImageView"
-        android:layout_alignWithParentIfMissing="true"
+        android:layout_weight="100"
         android:layout_marginLeft="@dimen/common_margin"
         android:layout_marginRight="@dimen/common_margin"
         android:gravity="center_vertical"
@@ -19,13 +20,10 @@
         android:id="@+id/nearestShopImageView"
         android:layout_width="@dimen/shop_item_nearest_shop_size"
         android:layout_height="@dimen/shop_item_nearest_shop_size"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignWithParentIfMissing="true"
         android:layout_marginRight="@dimen/common_margin"
         android:layout_marginEnd="@dimen/common_margin"
         android:layout_marginTop="@dimen/common_margin"
         android:contentDescription="@string/nearest_shop"
         android:src="@drawable/nearest_shop" />
 
-</RelativeLayout>
+</LinearLayout>
