--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -37,10 +37,12 @@
 
             </android.support.design.widget.AppBarLayout>
 
-            <ListView
-                android:id="@+id/goodsListView"
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/selectedGoodsRecyclerView"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" />
+                android:layout_height="match_parent"
+                app:layoutManager="LinearLayoutManager"
+                tools:listitem="@layout/list_item_selected_good" />
 
         </LinearLayout>
 
