--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,6 +7,7 @@
     <dimen name="shop_item_height">50dp</dimen>
     <dimen name="shop_item_nearest_shop_size">32dp</dimen>
     <dimen name="service_image_size">48dp</dimen>
+    <dimen name="progress_bar_size">32dp</dimen>
     <dimen name="shop_photo_size">100dp</dimen>
     <dimen name="shop_filter_service_button_size">48dp</dimen>
     <dimen name="history_item_height">50dp</dimen>
