--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,12 +6,13 @@
     <dimen name="common_drawer_layout_width">300dp</dimen>
     <dimen name="shop_item_height">50dp</dimen>
     <dimen name="shop_item_nearest_shop_size">32dp</dimen>
-    <dimen name="service_image_size">48dp</dimen>
     <dimen name="progress_bar_size">32dp</dimen>
+    <dimen name="service_image_size">48dp</dimen>
     <dimen name="shop_photo_size">100dp</dimen>
     <dimen name="shop_filter_service_button_size">48dp</dimen>
-    <dimen name="history_item_height">50dp</dimen>
-    <dimen name="history_details_item_height">40dp</dimen>
-    <dimen name="app_bar_height">200dp</dimen>
     <dimen name="history_list_width">350dp</dimen>
+    <dimen name="history_item_height">50dp</dimen>
+    <dimen name="app_bar_height">200dp</dimen>
+    <dimen name="add_good_button_size">48dp</dimen>
+    <dimen name="good_details_button_size">48dp</dimen>
 </resources>
