--- a/app/src/main/res/layout/list_item_selected_good.xml
+++ b/app/src/main/res/layout/list_item_selected_good.xml
@@ -50,7 +50,7 @@
             android:layout_marginEnd="@dimen/common_margin"
             android:textAppearance="?android:attr/textAppearanceSmall"
             android:singleLine="true"
-            android:gravity="start|center_vertical" />
+            android:gravity="end|center_vertical" />
 
         <ru.okmarket.okgoods.widgets.ImageButtonWithTooltip
             android:id="@+id/goodDetailsButton"
