--- a/app/src/main/res/layout/fragment_history_details.xml
+++ b/app/src/main/res/layout/fragment_history_details.xml
@@ -7,11 +7,59 @@
     android:orientation="vertical"
     tools:context=".fragments.HistoryDetailsFragment">
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/historyDetailsRecyclerView"
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layoutManager="LinearLayoutManager"
-        tools:listitem="@layout/list_item_history_details" />
+        android:layout_height="0dp"
+        android:layout_weight="100">
+
+        <TextView
+            android:id="@+id/noInformationTextView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:visibility="gone"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:gravity="center"
+            android:textColor="@color/noInformationColor"
+            android:text="@string/no_information" />
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/historyDetailsRecyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:layoutManager="LinearLayoutManager"
+            tools:listitem="@layout/list_item_history_details" />
+
+    </FrameLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingLeft="@dimen/common_margin"
+        android:paddingTop="@dimen/common_margin"
+        android:paddingRight="@dimen/common_margin"
+        android:paddingBottom="@dimen/common_margin"
+        android:orientation="horizontal"
+        android:background="@color/colorPrimary">
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="100"
+            android:layout_marginRight="@dimen/common_margin"
+            android:layout_marginEnd="@dimen/common_margin"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:maxLines="1"
+            android:textColor="@color/textColorPrimary"
+            android:text="@string/total" />
+
+        <TextView
+            android:id="@+id/totalTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:maxLines="1"
+            android:textColor="@color/textColorPrimary" />
+
+    </LinearLayout>
 
 </LinearLayout>
