--- a/app/src/main/res/layout/list_item_history_details.xml
+++ b/app/src/main/res/layout/list_item_history_details.xml
@@ -21,14 +21,14 @@
             android:layout_marginRight="@dimen/common_margin"
             android:layout_marginEnd="@dimen/common_margin"
             android:textAppearance="?android:attr/textAppearanceSmall"
-            android:singleLine="true" />
+            android:maxLines="1" />
 
         <TextView
             android:id="@+id/costTextView"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:textAppearance="?android:attr/textAppearanceSmall"
-            android:singleLine="true" />
+            android:maxLines="1" />
 
     </LinearLayout>
 
@@ -56,7 +56,7 @@
             android:layout_marginLeft="@dimen/common_margin"
             android:layout_marginRight="@dimen/common_margin"
             android:textAppearance="?android:attr/textAppearanceSmall"
-            android:singleLine="true"
+            android:maxLines="1"
             android:gravity="end|center_vertical" />
 
         <ru.okmarket.okgoods.widgets.ImageButtonWithTooltip
