--- a/app/src/main/res/layout/activity_goods_catalog.xml
+++ b/app/src/main/res/layout/activity_goods_catalog.xml
@@ -1,12 +1,59 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".activities.GoodsCatalogActivity">
 
-</RelativeLayout>
+    <android.support.design.widget.AppBarLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:theme="@style/AppTheme.AppBarOverlay">
+
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="?attr/colorPrimary"
+            app:popupTheme="@style/AppTheme.PopupOverlay" />
+
+    </android.support.design.widget.AppBarLayout>
+
+    <ru.okmarket.okgoods.widgets.NoScrollableDrawerLayout
+        android:id="@+id/drawerLayout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:openDrawer="start">
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/goodsCatalogRecyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:layoutManager="LinearLayoutManager"
+            tools:listitem="@layout/list_item_goods_catalog" />
+
+        <FrameLayout
+            android:id="@+id/goodsCatalogMenuView"
+            android:layout_width="@dimen/common_drawer_layout_width"
+            android:layout_height="match_parent"
+            android:layout_gravity="start"
+            android:background="@color/windowBackground">
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/goodsCatalogMenuRecyclerView"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                app:layoutManager="LinearLayoutManager"
+                tools:listitem="@layout/list_item_goods_catalog_menu" />
+
+        </FrameLayout>
+
+    </ru.okmarket.okgoods.widgets.NoScrollableDrawerLayout>
+
+</LinearLayout>
