--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -10,6 +10,7 @@
     <dimen name="service_image_size">48dp</dimen>
     <dimen name="shop_photo_size">100dp</dimen>
     <dimen name="shop_filter_service_button_size">48dp</dimen>
+    <dimen name="expand_category_button_size">24dp</dimen>
     <dimen name="history_list_width">350dp</dimen>
     <dimen name="history_item_height">50dp</dimen>
     <dimen name="app_bar_height">200dp</dimen>
