--- a/app/src/main/res/layout/dialog_shop_filter.xml
+++ b/app/src/main/res/layout/dialog_shop_filter.xml
@@ -61,112 +61,126 @@
                 android:id="@+id/serviceClearingSettlementButton"
                 android:layout_width="@dimen/shop_filter_service_button_size"
                 android:layout_height="@dimen/shop_filter_service_button_size"
-                android:src="@drawable/service_clearing_settlement"
                 android:contentDescription="@string/service_clearing_settlement"
+                android:src="@drawable/service_clearing_settlement"
+                android:scaleType="centerInside"
                 style="@style/ShopFilterServiceButtonStyle" />
 
             <ru.okmarket.okgoods.widgets.ImageButtonWithTooltip
                 android:id="@+id/serviceCosmeticsButton"
                 android:layout_width="@dimen/shop_filter_service_button_size"
                 android:layout_height="@dimen/shop_filter_service_button_size"
-                android:src="@drawable/service_cosmetics"
                 android:contentDescription="@string/service_cosmetics"
+                android:src="@drawable/service_cosmetics"
+                android:scaleType="centerInside"
                 style="@style/ShopFilterServiceButtonStyle" />
 
             <ru.okmarket.okgoods.widgets.ImageButtonWithTooltip
                 android:id="@+id/servicePlaygroundButton"
                 android:layout_width="@dimen/shop_filter_service_button_size"
                 android:layout_height="@dimen/shop_filter_service_button_size"
-                android:src="@drawable/service_playground"
                 android:contentDescription="@string/service_playground"
+                android:src="@drawable/service_playground"
+                android:scaleType="centerInside"
                 style="@style/ShopFilterServiceButtonStyle" />
 
             <ru.okmarket.okgoods.widgets.ImageButtonWithTooltip
                 android:id="@+id/serviceFishIslandButton"
                 android:layout_width="@dimen/shop_filter_service_button_size"
                 android:layout_height="@dimen/shop_filter_service_button_size"
-                android:src="@drawable/service_fish_island"
                 android:contentDescription="@string/service_fish_island"
+                android:src="@drawable/service_fish_island"
+                android:scaleType="centerInside"
                 style="@style/ShopFilterServiceButtonStyle" />
 
             <ru.okmarket.okgoods.widgets.ImageButtonWithTooltip
                 android:id="@+id/serviceBakeryButton"
                 android:layout_width="@dimen/shop_filter_service_button_size"
                 android:layout_height="@dimen/shop_filter_service_button_size"
-                android:src="@drawable/service_bakery"
                 android:contentDescription="@string/service_bakery"
+                android:src="@drawable/service_bakery"
+                android:scaleType="centerInside"
                 style="@style/ShopFilterServiceButtonStyle" />
 
             <ru.okmarket.okgoods.widgets.ImageButtonWithTooltip
                 android:id="@+id/serviceCookeryButton"
                 android:layout_width="@dimen/shop_filter_service_button_size"
                 android:layout_height="@dimen/shop_filter_service_button_size"
-                android:src="@drawable/service_cookery"
                 android:contentDescription="@string/service_cookery"
+                android:src="@drawable/service_cookery"
+                android:scaleType="centerInside"
                 style="@style/ShopFilterServiceButtonStyle" />
 
             <ru.okmarket.okgoods.widgets.ImageButtonWithTooltip
                 android:id="@+id/serviceTaxiOrderingButton"
                 android:layout_width="@dimen/shop_filter_service_button_size"
                 android:layout_height="@dimen/shop_filter_service_button_size"
-                android:src="@drawable/service_taxi_ordering"
                 android:contentDescription="@string/service_taxi_ordering"
+                android:src="@drawable/service_taxi_ordering"
+                android:scaleType="centerInside"
                 style="@style/ShopFilterServiceButtonStyle" />
 
             <ru.okmarket.okgoods.widgets.ImageButtonWithTooltip
                 android:id="@+id/servicePharmacyButton"
                 android:layout_width="@dimen/shop_filter_service_button_size"
                 android:layout_height="@dimen/shop_filter_service_button_size"
-                android:src="@drawable/service_pharmacy"
                 android:contentDescription="@string/service_pharmacy"
+                android:src="@drawable/service_pharmacy"
+                android:scaleType="centerInside"
                 style="@style/ShopFilterServiceButtonStyle" />
 
             <ru.okmarket.okgoods.widgets.ImageButtonWithTooltip
                 android:id="@+id/serviceDegustationButton"
                 android:layout_width="@dimen/shop_filter_service_button_size"
                 android:layout_height="@dimen/shop_filter_service_button_size"
-                android:src="@drawable/service_degustation"
                 android:contentDescription="@string/service_degustation"
+                android:src="@drawable/service_degustation"
+                android:scaleType="centerInside"
                 style="@style/ShopFilterServiceButtonStyle" />
 
             <ru.okmarket.okgoods.widgets.ImageButtonWithTooltip
                 android:id="@+id/serviceOrderingFoodButton"
                 android:layout_width="@dimen/shop_filter_service_button_size"
                 android:layout_height="@dimen/shop_filter_service_button_size"
-                android:src="@drawable/service_ordering_food"
                 android:contentDescription="@string/service_ordering_food"
+                android:src="@drawable/service_ordering_food"
+                android:scaleType="centerInside"
                 style="@style/ShopFilterServiceButtonStyle" />
 
             <ru.okmarket.okgoods.widgets.ImageButtonWithTooltip
                 android:id="@+id/serviceCafeButton"
                 android:layout_width="@dimen/shop_filter_service_button_size"
                 android:layout_height="@dimen/shop_filter_service_button_size"
-                android:src="@drawable/service_cafe"
                 android:contentDescription="@string/service_cafe"
+                android:src="@drawable/service_cafe"
+                android:scaleType="centerInside"
                 style="@style/ShopFilterServiceButtonStyle" />
 
             <ru.okmarket.okgoods.widgets.ImageButtonWithTooltip
                 android:id="@+id/serviceGiftCardsButton"
                 android:layout_width="@dimen/shop_filter_service_button_size"
                 android:layout_height="@dimen/shop_filter_service_button_size"
-                android:src="@drawable/service_gift_cards"
                 android:contentDescription="@string/service_gift_cards"
+                android:src="@drawable/service_gift_cards"
+                android:scaleType="centerInside"
                 style="@style/ShopFilterServiceButtonStyle" />
 
             <ru.okmarket.okgoods.widgets.ImageButtonWithTooltip
                 android:id="@+id/serviceParkingButton"
                 android:layout_width="@dimen/shop_filter_service_button_size"
                 android:layout_height="@dimen/shop_filter_service_button_size"
-                android:src="@drawable/service_parking"
                 android:contentDescription="@string/service_parking"
+                android:src="@drawable/service_parking"
+                android:scaleType="centerInside"
                 style="@style/ShopFilterServiceButtonStyle" />
 
             <ru.okmarket.okgoods.widgets.ImageButtonWithTooltip
                 android:id="@+id/servicePointOfIssuingOrdersButton"
                 android:layout_width="@dimen/shop_filter_service_button_size"
                 android:layout_height="@dimen/shop_filter_service_button_size"
-                android:src="@drawable/service_point_of_issuing_orders"
                 android:contentDescription="@string/service_point_of_issuing_orders"
+                android:src="@drawable/service_point_of_issuing_orders"
+                android:scaleType="centerInside"
                 style="@style/ShopFilterServiceButtonStyle" />
 
         </android.support.v7.widget.GridLayout>
