--- a/app/src/main/res/layout/list_item_history_details.xml
+++ b/app/src/main/res/layout/list_item_history_details.xml
@@ -45,8 +45,9 @@
             android:id="@+id/addGoodButton"
             android:layout_width="@dimen/add_good_button_size"
             android:layout_height="@dimen/add_good_button_size"
+            android:contentDescription="@string/add_good_to_list"
             android:src="@drawable/add"
-            android:contentDescription="@string/add_good_to_list" />
+            android:scaleType="centerInside" />
 
         <TextView
             android:id="@+id/secondCostTextView"
@@ -63,8 +64,9 @@
             android:id="@+id/goodDetailsButton"
             android:layout_width="@dimen/good_details_button_size"
             android:layout_height="@dimen/good_details_button_size"
+            android:contentDescription="@string/good_details"
             android:src="@drawable/good_details"
-            android:contentDescription="@string/good_details" />
+            android:scaleType="centerInside" />
 
     </LinearLayout>
 
