--- a/app/src/main/res/layout/list_item_selected_good.xml
+++ b/app/src/main/res/layout/list_item_selected_good.xml
@@ -56,8 +56,9 @@
             android:id="@+id/goodDetailsButton"
             android:layout_width="@dimen/good_details_button_size"
             android:layout_height="@dimen/good_details_button_size"
+            android:contentDescription="@string/good_details"
             android:src="@drawable/good_details"
-            android:contentDescription="@string/good_details" />
+            android:scaleType="centerInside" />
 
     </LinearLayout>
 
