--- a/app/src/main/res/layout/list_item_goods_category.xml
+++ b/app/src/main/res/layout/list_item_goods_category.xml
@@ -20,7 +20,7 @@
     <TextView
         android:id="@+id/nameTextView"
         android:layout_width="0dp"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_weight="100"
         android:layout_marginLeft="@dimen/common_margin"
         android:layout_marginRight="@dimen/common_margin"
