--- a/app/src/main/res/layout/activity_goods_catalog.xml
+++ b/app/src/main/res/layout/activity_goods_catalog.xml
@@ -35,7 +35,8 @@
             android:id="@+id/goodsRecyclerView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            app:layoutManager="LinearLayoutManager"
+            app:layoutManager="GridLayoutManager"
+            app:spanCount="2"
             tools:listitem="@layout/list_item_good" />
 
         <FrameLayout
