--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -12,6 +12,7 @@
     <dimen name="shop_filter_service_button_size">48dp</dimen>
     <dimen name="expand_category_button_size">24dp</dimen>
     <dimen name="expand_category_indentation">8dp</dimen>
+    <dimen name="good_max_width">150dp</dimen>
     <dimen name="history_list_width">350dp</dimen>
     <dimen name="history_item_height">50dp</dimen>
     <dimen name="app_bar_height">200dp</dimen>
