--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,5 +8,6 @@
     <color name="textColor">#FF000000</color>
     <color name="black_overlay">#66000000</color>
     <color name="selectedShop">#FFFFECB3</color>
+    <color name="progressBarInToolbar">#FFFFFFFF</color>
     <color name="noInformationColor">#80000000</color>
 </resources>
